# src/main/java/com/quarkus/smartbackoffice/controllers/ArticleController.java
@@ -1,28 +1,26 @@
 package com.quarkus.smartbackoffice.controllers;
 
 import com.quarkus.smartbackoffice.provider.controllers.ArticlesApi;
-import com.quarkus.smartbackoffice.provider.models.GeneratedArticle;
+import com.quarkus.smartbackoffice.provider.models.ArticleDto;
 import com.quarkus.smartbackoffice.services.ArticleService;
 import io.smallrye.common.annotation.NonBlocking;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
+import lombok.RequiredArgsConstructor;
+import lombok.val;
 
 import java.net.URI;
 import java.util.List;
 
+@RequiredArgsConstructor
 @NonBlocking
 public class ArticleController implements ArticlesApi {
 
     private final ArticleService articleService;
 
-    @Inject
-    public ArticleController(ArticleService articleService) {
-        this.articleService = articleService;
-    }
-
     @Override
-    public Response deleteArticle(final Long articleId) {
-        return Response.ok().build();
+    public Response allArticles() {
+        return Response.ok(List.of(articleService.allArticles())).build();
     }
 
     @Override
@@ -31,17 +29,18 @@ public class ArticleController implements ArticlesApi {
     }
 
     @Override
-    public Response updateArticle(final Long articleId, final GeneratedArticle article) {
+    public Response createArticle(final Long xCategoryId, final ArticleDto articleDto) {
+        val persistedArticle = articleService.createArticle(articleDto);
+        return Response.created(URI.create("/Articles/" + persistedArticle.getId())).build();
+    }
+
+    @Override
+    public Response updateArticle(final Long articleId, final ArticleDto articleDto) {
         return Response.ok().build();
     }
 
     @Override
-    public Response allArticles() {
-        return Response.ok(List.of(articleService.oneArticle(null))).build();
-    }
-
-    @Override
-    public Response createArticle(Long xCategoryId, final GeneratedArticle article) {
-        return Response.created(URI.create("todo")).build();
+    public Response deleteArticle(final Long articleId) {
+        return Response.ok().build();
     }
 }
